test/arrays/return/checkReturnedArray2.good
checkReturnedArray2.chpl:2: error: halt reached - assigning between arrays of different shapes in dimension 1: 2 vs. 3
